@@ -1,3 +1,10 @@
+2002-02-25  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* lisp/smiley.el (smiley-regexp-alist): Use faces which originate
+	in etc-0.27.tar.gz if exist.
+	(gnus-smiley-file-types): Add xbm if available.
+	(smiley-region): Don't put two or more faces in one place.
+
 2002-02-22  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* lisp/gnus-art.el (gnus-request-article-this-buffer): Temporally
